5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1723_2496.log
== TEST (2019-05-09 10:38:03) 
-- CODE:
num = int(input("Digite um numero: "))
c=0
soma=0	
while(num >= -1):
	soma = soma + num
	c = c + 1
	num = int(input("Digite um numero: "))
print(soma)	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:38:17) 
-- CODE:
num = int(input("Digite um numero: "))
c=0
soma=0	
while(num > -1):
	soma = soma + num
	c = c + 1
	num = int(input("Digite um numero: "))
print(soma)	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:38:28) 
-- CODE:
num = int(input("Digite um numero: "))
c=0
soma=0	
while(num > -1):
	soma = soma + num
	c = c + 1
	num = int(input("Digite um numero: "))
print(soma)	
-- EXECUTION TIME:
0.155245
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:39:22) 
-- CODE:
num = int(input("Digite um numero: "))
c=0
soma=0	
while(num > -1):
	soma = soma + num
	c = c + 1
	num = int(input("Digite um numero: "))
print(soma)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:39:30) 
-- CODE:
num = int(input("Digite um numero: "))
c=0
soma=0	
while(num > -1):
	soma = soma + num
	c = c + 1
	num = int(input("Digite um numero: "))
print(soma)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:39:42) 
-- CODE:
num = int(input("Digite um numero: "))
c=0
soma=0	
while(num > -1):
	soma = soma + num
	c = c + 1
	num = int(input("Digite um numero: "))
print(soma)
-- EXECUTION TIME:
0.122876
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:39:52) 
-- CODE:
num = int(input("Digite um numero: "))
c=0
soma=0	
while(num > -1):
	soma = soma + num
	c = c + 1
	num = int(input("Digite um numero: "))
   print(soma)
-- ERROR:
File "XXXX", line 8
    print(soma)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:40:04) 
-- CODE:
num = int(input("Digite um numero: "))
c=0
soma=0	
while(num > -1):
	soma = soma + num
	c = c + 1
	num = int(input("Digite um numero: "))
   
print(soma)
-- ERROR:
File "XXXX", line 8
    print(soma)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:40:06) 
-- CODE:
num = int(input("Digite um numero: "))
c=0
soma=0	
while(num > -1):
	soma = soma + num
	c = c + 1
	num = int(input("Digite um numero: "))
   
print(soma)
-- EXECUTION TIME:
0.176956
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:40:12) 
-- CODE:
num = int(input("Digite um numero: "))
c=0
soma=0	
while(num > -1):
	soma = soma + num
	c = c + 1
	num = int(input("Digite um numero: "))
   
print(soma)
-- ERROR:
File "XXXX", line 8
    print(soma)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:41:02) 
-- CODE:
num = int(input("Digite um numero: "))

soma=0	
while(num > -1):
	soma = soma + num
	
	num = int(input("Digite um numero: "))
   
print(soma)
-- ERROR:
File "XXXX", line 8
    print(soma)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:41:12) 
-- CODE:
num = int(input("Digite um numero: "))

soma=0	
while(num > -1):
	soma = soma + num
	
	num = int(input("Digite um numero: "))
   
print(soma)
-- EXECUTION TIME:
0.20264
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:41:38) 
-- CODE:
num = int(input("Digite um numero: "))

soma=0	
while(num != -1):
	soma = soma + num
	
	num = int(input("Digite um numero: "))
   
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:41:41) 
-- CODE:
num = int(input("Digite um numero: "))

soma=0	
while(num != -1):
	soma = soma + num
	
	num = int(input("Digite um numero: "))
   
print(soma)
-- EXECUTION TIME:
0.137918
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
